2023-10-29T01:20:34Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6680383036 # 907
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2023-10-29
* notice: last 14d: unq all: 2 33
* notice: prev accum: outdated-unq outdated-all / unq all: 269 566 / 285 603
* notice: next accum: outdated-unq outdated-all / unq all: 270 570 / 285 604
* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -1 / +1 +2 -0 -0 / 1 2
* notice: removed / changed dates: [2023-10-14] / [2023-10-15 2023-10-28]

2023-10-28T01:13:54Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6673851359 # 904
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2023-10-28
* notice: last 14d: unq all: 2 36
* notice: prev accum: outdated-unq outdated-all / unq all: 268 565 / 284 602
* notice: next accum: outdated-unq outdated-all / unq all: 269 566 / 285 603
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -1 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [2023-10-13] / [2023-10-14 2023-10-28]

2023-10-27T16:22:19Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6669727130 # 903
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2023-10-27
* notice: last 14d: unq all: 2 37
* notice: prev accum: outdated-unq outdated-all / unq all: 268 565 / 284 601
* notice: next accum: outdated-unq outdated-all / unq all: 268 565 / 284 602
* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +1 +2 -0 -0 / 1 2
* notice: removed / changed dates: [] / [2023-10-27]

2023-10-27T08:21:39Z: