@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2023-10-29T01:20:34Z",
+  "timestamp" : "2023-10-29T08:19:56Z",
   "count_outdated" : 570,
   "uniques_outdated" : 270,
-  "count" : 604,
-  "uniques" : 285,
+  "count" : 605,
+  "uniques" : 286,
   "clones" : [
     {
       "timestamp": "2023-10-15T00:00:00Z",
@@ -127,6 +127,15 @@
       "count": 2,
       "count_minmax": [ 1, 2 ],
       "count_decinc": [ 0, 2 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2023-10-29T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
