@@ -1,3 +1,12 @@
+2023-10-29T08:19:56Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6682205661 # 908
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2023-10-29
+* notice: last 14d: unq all: 2 34
+* notice: prev accum: outdated-unq outdated-all / unq all: 270 570 / 285 604
+* notice: next accum: outdated-unq outdated-all / unq all: 270 570 / 286 605
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [] / [2023-10-29]
+
 2023-10-29T01:20:34Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6680383036 # 907
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2023-10-29
